作者邮箱修改

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "ElseZhang",
-            "email": "mzhang@dxy.cn"
+            "email": "mzhang173@gmail.com"
         }
     ],
     "autoload": {
